--- a/usth_weather/app/src/main/res/layout/fragment_weather.xml
+++ b/usth_weather/app/src/main/res/layout/fragment_weather.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeatherFragment"
-    android:background="@color/blue_1">
+    android:background="@color/blue_1"
+	android:padding="20dp"
+    android:background="@drawable/background">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
